--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>Necesitamos acceso a tu ubicación para mostrar la dirección en tiempo real.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>Necesitamos acceso a tu ubicación para mostrar la dirección en tiempo real.</string>
 </dict>
 </plist>
