--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.7
   font_awesome_flutter: ^10.4.0
+  intl: ^0.19.0
+  timezone: ^0.9.0
+  geolocator: ^8.2.1
+  geocoding: ^2.2.2
+  qr_code_scanner: ^0.7.0
 
 dev_dependencies:
   flutter_test:
