--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  permission_handler: ^10.2.0
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.7
   font_awesome_flutter: ^10.4.0
@@ -46,6 +47,12 @@ dependencies:
   bloc: ^8.0.1
   flutter_bloc: ^8.0.0
   quickalert: ^1.0.2
+  path_provider: ^2.0.11
+  open_file: ^3.2.1
+  dio: ^5.0.0
+  flutter_pdfview: ^1.0.6
+  syncfusion_flutter_xlsio: ^27.1.58
+  
 
 dev_dependencies:
   flutter_test:
