--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dio: ^5.0.0
   flutter_pdfview: ^1.0.6
   syncfusion_flutter_xlsio: ^27.1.58
+  image_picker: ^0.8.5+3
   
 
 dev_dependencies:
