--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.papigiras_app">
+    package="com.papigiras_app">
 
     <!-- Permisos necesarios -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -8,14 +8,19 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
-    <!-- Para Android 11+, se necesita este permiso si la app necesita acceso completo al almacenamiento -->
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
-        android:label="papigiras_app"
+        android:label="papigiras"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
-        android:requestLegacyExternalStorage="true"> <!-- Este atributo ya no tiene efecto en Android 11+ -->
+        android:icon="@mipmap/launcher_icon"
+        android:requestLegacyExternalStorage="true">
+        
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCxI0rCnrzCXAVpOBdPAszvmVdi-NygLwo"/>
+               
+                <!-- Este atributo ya no tiene efecto en Android 11+ -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
