--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyCxI0rCnrzCXAVpOBdPAszvmVdi-NygLwo"/>
+        
                
                 <!-- Este atributo ya no tiene efecto en Android 11+ -->
         <activity
@@ -45,5 +46,16 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+    <queries>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="https" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="whatsapp" />
+    </intent>
+</queries>
 
 </manifest>
