--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,10 +40,10 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   intl: ^0.19.0
   timezone: ^0.9.0
-  geolocator: ^8.2.1
+  geolocator: ^13.0.1
   geocoding: ^2.2.2
   qr_code_scanner: ^1.0.1
-  http: ^0.13.4
+  http: ^1.2.2
   bloc: ^8.0.1
   flutter_bloc: ^8.0.0
   quickalert: ^1.0.2
@@ -53,6 +53,12 @@ dependencies:
   flutter_pdfview: ^1.0.6
   syncfusion_flutter_xlsio: ^27.1.58
   image_picker: ^0.8.5+3
+  flutter_map: ^7.0.2
+  location: ^5.0.0
+  flutter_map_location_marker: ^9.1.1
+  latlong2: ^0.9.1
+  url_launcher: ^6.3.1
+
   
 
 dev_dependencies:
