--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_map_location_marker: ^9.1.1
   latlong2: ^0.9.1
   url_launcher: ^6.3.1
+  qr_flutter: ^4.1.0
+  shared_preferences: ^2.0.10
 
   
 
