--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ dependencies:
   url_launcher: ^6.3.1
   qr_flutter: ^4.1.0
   shared_preferences: ^2.0.10
-
+  flutter_compass: ^0.8.0
+  flutter_launcher_icons: ^0.13.1
   
 
 dev_dependencies:
@@ -68,10 +69,10 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
+flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo-papigiras.png"
+  image_path: "assets/logo-papigiras.jpg"
 
 
 
