--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
 
     <application
@@ -19,6 +20,20 @@
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
         android:requestLegacyExternalStorage="true">
+
+        <service
+        android:name="com.almoullim.background_locator.IsolateHolderService"
+        android:exported="false"/>
+        <service
+        android:name="com.almoullim.background_locator.LocationService"
+        android:exported="true"/>
+        <receiver
+            android:name="com.almoullim.background_locator.RestarterReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.almoullim.background_locator.ACTION_RESTART_LOCATOR"/>
+            </intent-filter>
+        </receiver>
         
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyCxI0rCnrzCXAVpOBdPAszvmVdi-NygLwo"/>
