add new logical java 17

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=/Users/giovabenvenuto/Library/Java/JavaVirtualMachines/ms-17.0.16/Contents/Home
