--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=/Users/giovabenvenuto/Library/Java/JavaVirtualMachines/ms-17.0.16/Contents/Home
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
