--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_image_compress: ^2.4.0
   device_info_plus: ^12.2.0
+  photo_view: ^0.15.0
+  image_gallery_saver_plus: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
