--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   device_info_plus: ^12.2.0
   photo_view: ^0.15.0
   image_gallery_saver_plus: ^4.0.1
+  share_plus: ^10.0.2
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
